# text-to-video

./: .gitignore  Dockerfile  README.md  pyproject.toml  run.py
src/: __init__.py  biz.py  constants.py  views.py
src/forms/: __init__.py  setting.py  video.py
src/templates/: 403.html  404.html  base.html  index.html
src/templates/auth/: login.html  register.html  register_email.html
src/templates/setting/: edit.html  list.html
src/templates/video/: add_text_to_video.html  detail.html  list.html
src/utils/: __init__.py  baidu_pic.py  db.py  exceptions.py  string.py  volcengine.py
